--- a/styles/base.css
+++ b/styles/base.css
@@ -125,14 +125,25 @@ ul li:hover {
     text-align: center;
     padding: 1rem;
 }
-.weather-content h4 {
-    font-size: 1.2em;
+.card {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: .5em;
+    width: 300px;
 }
 
-.weather-content .data-label {
-    font-weight: 600;
+#weather-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#weather-icon {
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
 }
 
 .map-container iframe {
