--- a/styles/base.css
+++ b/styles/base.css
@@ -17,7 +17,10 @@ header {
     justify-content: space-between; /* Ensure content is spread out (logo, nav, and dark mode toggle) */
     align-items: center; /* Vertically align content */
 }
-
+hr {
+    visibility: visible;
+    width: 100%;
+}
 /* Position the dark mode toggle in the top right corner of the header */
 #dark-mode-toggle {
     position: absolute; /* Position it relative to the header */
@@ -48,6 +51,9 @@ nav {
     position: relative;
     text-align: center;
     margin-right: 15px; /* Space out the links */
+}
+nav a:hover {
+    color: #daa520;
 }
 
 nav a {
