--- a/lesson06/styles/responsive-image.css
+++ b/lesson06/styles/responsive-image.css
@@ -1,5 +1,4 @@
-
-.hero {
-  max-width: 1280px; /* or any other value you prefer */
-  margin: 0 auto; /* centers the hero section */
+.hero img {
+  width: 100%;
+  height: auto;
 }
